@@ -106,7 +106,7 @@ function setupCardDavAutoCompleteSession() {
 
 						// ldap searches don't insert a default entry with the default domain appended to it
 						// so reduce the minimum results for a popup to 2 in this case. 
-						autoCompleteWidget.minResultsForPopup = 2;
+// 						autoCompleteWidget.minResultsForPopup = 2;
 					}
 				}
 				gSessionAdded = true;
