@@ -1,6 +1,6 @@
 /* -*- Mode: java; tab-width: 2; c-tab-always-indent: t; indent-tabs-mode: t; c-basic-offset: 2 -*- */
 
-gCalendarBundle = {
+window.gCalendarBundle = {
  getString: function(a) {
 		return a;
 	}
